tests/neg-custom-args/captures/mut-iterator1.check
-- [E164] Declaration Error: tests/neg-custom-args/captures/mut-iterator1.scala:9:15 -----------------------------------
error overriding method next in trait Iterator of type (): U;
  method next of type (): U is an update method, cannot override a read-only method
5 |  def next(): T
  |      -
  |      the overridden method is here
6 |
7 |  def map[U](f: T => U): Iterator[U] = new Iterator:
8 |    def hasNext = Iterator.this.hasNext
9 |    update def next() = f(Iterator.this.next()) // error
  |               ^
  |               the overriding method is an update method, cannot override a read-only method

